# brarchive-rs

./: Cargo.toml  FORMAT.md  README.md
.github/workflows/: ci.yml  release.yml
__brarchive/: animation_controllers.brarchive  animations.brarchive  entity.brarchive  particles.brarchive  sounds.brarchive
__brarchive/ddui/: composition.brarchive
__brarchive/textures/entity/nautilus/: armor.brarchive
cli/: Cargo.toml
cli/src/: args.rs  main.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/versions/: mod.rs  v1.rs
lib/tests/: api.rs  edge_cases.rs  entities.rs  items.rs  recipes.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
