[package]
name = "brarchive-wasm"
version = "0.2.0"
edition = "2021"
authors = ["theaddonn <theaddonn@gmail.com>"]
description = "WASM bindings for brarchive"
repository = "https://github.com/theaddonn/brarchive-rs"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
brarchive = { path = "../lib" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
